SED-2567 Rollbacking default value of vmargs to empty list